--- a/BanksDll/BanksDllTests/BanksDllTests.csproj
+++ b/BanksDll/BanksDllTests/BanksDllTests.csproj
@@ -59,6 +59,9 @@
       <Name>BanksDll</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
